base/mysql-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql-petclinic
  labels:
    app.kubernetes.io/part-of: pet-clinic
    app.openshift.io/runtime: mysql-database
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels: 
      name: mysql-petclinic
  template:
    metadata:
      labels:
        name: mysql-petclinic
    spec:
      volumes:
        - name: petclinic-data
          persistentVolumeClaim:
            claimName: mysql-petclinic
      containers:
        - resources:
            limits:
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: mysql
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 3306
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: petclinic-data
              mountPath: /var/lib/mysql/data
          terminationMessagePolicy: File
          image: registry.redhat.io/rhel8/mysql-80
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
