base/petclinic-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"mysql-petclinic"}]
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/rgopired/spring-petclinic.git'
  name: frontend-petclinic
  labels:
    app: frontend-petclinic
    app.kubernetes.io/component: frontend-petclinic
    app.kubernetes.io/name: frontend-petclinic
    app.kubernetes.io/part-of: pet-clinic
    app.openshift.io/runtime: spring-boot
    app.openshift.io/runtime-version: openjdk-11-el7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-petclinic
  template:
    metadata:
      labels:
        app: frontend-petclinic
    spec:
      containers:
        - name: petclinic
          image: quay.io/ramgopireddy/pet-clinic:v1
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
