base/mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-petclinic
  annotations:
    template.openshift.io/expose-uri: 'mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}'
spec:
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    name: mysql-petclinic
status:
  loadBalancer: {}
